--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <div class="container">
             <h2>SOBRE A INSTITUIÇÃO</h2>
             <h3>Saiba mais sobre o Lar dos Velhinhos Belo Horizonte - MG</h3>
+            <h4>E em outras cidades<h4>
         </div><!-- /container -->
     </section><!-- /chamada -->
 </body>
